Changelog
=========

v0.9.0:

v0.8.1:
 - Show warnings and errors in the new order wizard
 - Bug fixing
   * Connection status was successful even when disconnected from bitcoin network
   * Fix setup wizard placement issues

v0.8.0:
 - Use a regtest instead of a testnet for integration tests
 - GUI redesign
 - Bug fixing
   * Fix overflow during wire protocol serialization

v0.7.0:
 - Trigger alarms on OKPay balance availabity issues
 - Improve SOAP failure logging
 - Adapt setup wizard to Coinffeine Technical Preview

v0.6.0:
 - Filter not-started exchanges in the operations view
 - Add a splash screen shown on application launching
 - Add quote information in order submission form
 - Add a web faucet for OKPay mock
 - Add a simple fee summary in order submission form
 - Add a notification area in the UI for alarm reporting

v0.5.2:
 - Bug fixing
   * Avoid sending repeated orders to the order book and improve handling
     or such duplications

v0.5.1:
 - Bug fixing
   * Now OKPay Mock balances are updated successfully after payments

v0.5.0:
 - Support for market-price orders
 - Support concurrent exchanges for a single order
 - New `list` command in OKPay Mock Console lists the known wallets
 - Add support to H2 database in OKPay Mock
 - Bug fixing
   * Save logging config file & log file itself in data dir specified
     with `--data-dir` command argument.

v0.4.2:
 - Bug fixing
   * Avoid self-crossing orders when clearing the order book
   * Fix a bug that caused unconfirmed outputs to be spent

v0.4.1:
 - Bug fixing
   * Fixed boundary condition when checking limit prices
   * Fixed minimum funds checking when several outputs of the same amount are
     used

v0.4.0:
 - Persist block chain headers in disk
 - Allow overriding the data path on the command line
 - [headless] Tell apart bids and asks on list command
 - [headless] Display the minimum output on status command
 - Bug fixing
   * Faster application stopping when retrying network connection