@@ -5,5 +5,5 @@ case class Version(major: Int, minor: Int) {
 }
 
 object Version {
-  val Current = Version(major = 0, minor = 3)
+  val Current = Version(major = 0, minor = 4)
 }
