@@ -2,6 +2,7 @@ Changelog
 =========
 
 v0.9.0:
+ - Make wire protocol error conditions more specific
 
 v0.8.1:
  - Show warnings and errors in the new order wizard
